[tool.poetry]
name = "aesthetic-tensor"
version = "0.1.0"
description = ""
authors = ["Iliya Zhechev <iliya.zhechev@gmail.com>"]
readme = "README.md"
packages = [{ include = "aesthetic_tensor" }]

[tool.poetry.dependencies]
python = "^3.9"
ansi2html = "^1.9.2"
numpy = "^2.0.1"
matplotlib = "^3.9.2"
seaborn = "^0.13.2"


[tool.poetry.group.dev.dependencies]
black = "^23.1.0"
jupyter = "^1.0.0"
torch = "^2.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
